--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,34 @@
 {
     "version": "0.2.0",
     "configurations": [
-        
-    
-        
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "projects_526f9d67"
+        },
+        {
+            "type": "java",
+            "name": "hello",
+            "request": "launch",
+            "mainClass": "hello",
+            "projectName": "projects_526f9d67"
+        },
+        {
+            "type": "java",
+            "name": "main",
+            "request": "launch",
+            "mainClass": "main",
+            "projectName": "projects_526f9d67"
+        },
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": ""
+        },
         {
             "name": "C/C++: g++.exe build and debug active file",
             "type": "cppdbg",
